<resources>
    <string name="app_name">Room Registration - Mandatory assignment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_book_a_room">Book a room</string>
    <string name="menu_my_reserved_rooms">My reserved rooms</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="sign_out">Sign out</string>
    <string name="tab_text_1">Unbooked</string>
    <string name="tab_text_2">Booked</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="current_date">Current date:</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_building">Building</string>
    <string name="pick_room">Room</string>
    <string name="pick_time">Time</string>
    <string name="purpose">Purpose</string>
    <string name="write_purpose">Write your purpose</string>
    <string name="add_reservation">Add Reservation</string>
    <string name="select_time">Select a time…</string>
    <string name="select_building">Select a building…</string>
    <string name="add_new_reservation">Add new reservation</string>
    <string name="wrong_time_settings">The first time must be smaller then the second time</string>
    <string name="room_already_booked">The room is already booked for that date and time</string>
    <string name="activate_settings">Activate Settings</string>
    <string name="primary_color">Primary color</string>
    <string name="color">#color</string>
    <string name="must_fullfill">Room and times shall be choosen</string>
    <string name="roomname" translatable="false">RoomName</string>
    <string name="capacityoruser" translatable="false">CapacityOrUser</string>
    <string name="remarksortime" translatable="false">RemarksOrTime</string>
    <string name="descriptionorpurpose" translatable="false">DescriptionOrPurpose</string>
    <string name="delete" translatable="false">DELETE</string>
    <string name="arrow" translatable="false"><![CDATA[-->]]></string>
    <string name="title" translatable="false">Title</string>
    <string name="subtitle" translatable="false">Subtitle</string>
</resources>
