<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:id="@+id/parent_layout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/image"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/image"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roomname"
            android:id="@+id/room_name"
            android:textStyle="bold"
            style="@style/ItemListTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacityoruser"
            android:id="@+id/capacity_or_user"
            style="@style/ItemListTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarksortime"
            android:id="@+id/remarks_or_time"
            style="@style/ItemListTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionorpurpose"
            android:id="@+id/description_or_purpose"
            style="@style/ItemListTextView"/>

    </LinearLayout>

    <Button
        android:id="@+id/myReservationDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/colorWarningRed"
        android:text="@string/delete"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>

</RelativeLayout>