<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/border"
        android:layout_marginTop="-2dp">

        <TextView
            android:id="@+id/activate_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_settings"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/activate_settings"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/border"
        android:layout_marginTop="-2dp">

        <TextView
            android:id="@+id/primary_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_color"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp" />
        <EditText
            android:hint="@string/color"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/color"
            android:layout_toEndOf="@+id/primary_color"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="#"
            android:inputType="text" />

    </RelativeLayout>

</LinearLayout>